--- a/index.html
+++ b/index.html
@@ -1,8 +1,3 @@
-컴퓨터 사양확인하는 프로그램 파이썬으로 만들 수 있다.
-1. 웹사이트 만들기
-2. 사양고양이 만들기
-3. 협업을 더 편하게 하는 방법 배우기
-4. git hub에 대해서 더 공부하기
-
-strong = <strong>안녕</strong>
-u = <u>안녕</u>
+<li><a href="HTML.html">HTML 문법</a></li>
+<li><a href="Economics.html">주식 & 경제</a></li>
+<li><a href="Feedback.html">피드백</a></li>
